--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,3 +1,3 @@
-name: ProjectKorraItems
+name: ProjectKorra-Items
 version: 2.0
-main: com.projectkorra.items.ProjectKorraItems
+main: com.projectkorra.items.Items
